packages/related/test/tests/test_plan_execution/logs/snapshots/node_error_in_timeout.txt
------------ 2 executions to run ------------
1 with node (node_worker_thread@<mock>)
1 with node_2 (node_child_process@<mock>)
---------------------------------------------

✖ error_in_timeout.spec.js [node/<mock>] 1/2 (1 failed, 1 remaining)
--------------- error ----------------
1 | await new Promise(() => {
2 |   setTimeout(() => {
3 |     throw new Error("here");
              ^
Error: here
  at Timeout._onTimeout (<mock>/error_in_timeout.spec.js:3:11)
--------------------------------------
✖ error_in_timeout.spec.js [node_2/<mock>] 2/2 (all failed)
--------------- error ----------------
1 | await new Promise(() => {
2 |   setTimeout(() => {
3 |     throw new Error("here");
              ^
Error: here
  at Timeout._onTimeout (<mock>/error_in_timeout.spec.js:3:11)
--------------------------------------

------------------ summary ------------------
2 executions: all failed
duration: <mock>
---------------------------------------------